fail: google.nodejs.runtime@1.0.0 fail: google.nodejs.yarn@2.1.0 pass: google.nodejs.firebasebundle@0.0.1 ======== Output: google.nodejs.runtime@1.0.0 ======== Opting out: neither package.json nor any .js files found ======== Output: google.nodejs.pnpm@0.1.0 ======== Opting out: package.json not found ======== Output: google.nodejs.firebasebundle@0.0.1 ======== Opting in: firebase apphosting application ======== Results ======== fail: google.nodejs.runtime@1.0.0 fail: google.nodejs.pnpm@0.1.0 pass: google.nodejs.firebasebundle@0.0.1 ======== Output: google.nodejs.runtime@1.0.0 ======== Opting out: neither package.json nor any .js files found ======== Output: google.nodejs.npm@1.1.0 ======== Opting out: package.json not found ======== Output: google.nodejs.firebasebundle@0.0.1 ======== Opting in: firebase apphosting application ======== Results ======== fail: google.nodejs.runtime@1.0.0 fail: google.nodejs.npm@1.1.0 pass: google.nodejs.firebasebundle@0.0.1 ERROR: No buildpack groups passed detection. ERROR: failed to detect: buildpack(s) failed with err ERROR: failed to build: executing lifecycle: failed with status code: 21 Finished Step #2 - "pack" ERROR ERROR: build step 2 "gcr.io/k8s-skaffold/pack" failed: step exited with non-zero status: 1

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,10 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+buildConfig:
+  # Specifies the command to build your application.
+  # For a Next.js app, this is typically 'npm run build'.
+  buildCommand: 'npm run build'
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
